--- a/README
+++ b/README
@@ -1,13 +1,13 @@
 Protect Your Territory (11/28/2019)
 
-Western University
-CS3307 Group 27
-
 Carolyn Owen
 Abdallah Alasmar
 Oluwadarasimi Ogunshote
 Ositadinma Arimah
 Jake Nemiroff
+
+-----------------------------------------------------------------------------------------------------------------------------------------
+For this project, we have decided to learn about creating a turn based strategy game in C++. We hope you enjoy it!
 
 -----------------------------------------------------------------------------------------------------------------------------------------
 LIBRARY REQUIREMENTS BEFORE RUNNING
